# ComfyUI-Simple_Readable_Metadata-SG

./: README.md  Simple_Readable_Metadata_MAX_SG.py  Simple_Readable_Metadata_SG.py  Simple_Readable_Metadata_Save_Prompt_SG.py  Simple_Readable_Metadata_Save_Text_SG.py  Simple_Readable_Metadata_Text_Viewer_SG.py  Simple_Readable_Metadata_VIDEO_SG.py  __init__.py  pyproject.toml
old versions/: ComfyUI-Simple_Readable_Metadata-SG_2.0.2.rar  ReadMe.txt
web/: Simple_Readable_Metadata_MAX_SG.js  Simple_Readable_Metadata_SG.js  Simple_Readable_Metadata_Save_Text_SG.js  Simple_Readable_Metadata_Text_Viewer_SG.js  Simple_Readable_Metadata_VIDEO_SG.js
