[project]
name = "ComfyUI-Simple_Readable_Metadata-SG"
description = "View Image Metadata of ComfyUI as well as of ForgeUI or Automatic 1111 generated images in Easily Readable Format"
version = "1.5.5"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/ShammiG/ComfyUI-Simple_Readable_Metadata-SG"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/ShammiG/ComfyUI-Simple_Readable_Metadata-SG/blob/main/README.md"
"Bug Tracker" = "https://github.com/ShammiG/ComfyUI-Simple_Readable_Metadata-SG/issues"

[tool.comfy]
PublisherId = "shammi-g"
DisplayName = "ComfyUI-Simple_Readable_Metadata-SG"
Icon = "" 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility




